# winapi_rust_window_prompt

./: Cargo.toml  README.md
src/: fun.rs  lib.rs  main.rs  mainbak.rs  window.txt
src/fun/: savewindow.rs
