[package]
name = "wintestk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


#winapi = {version="0.3.9", features = ["winuser", "libloaderapi","windef"] }

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
	"Win32_Graphics_Gdi",
	"Win32_UI_Controls_RichEdit",
	"Win32_System_LibraryLoader",
	"Win32_System_WindowsProgramming"
]
